# sdl2_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: surface.h
src/: surface.cpp
